Fix tag wrapping

--- a/src/assets/scss/pages/post.scss
+++ b/src/assets/scss/pages/post.scss
@@ -52,6 +52,7 @@
 
   .tag-section {
     align-items: center;
+    margin-top: 1.5rem'
     
     .tag-list {
       margin: 0;
